# rust-shot

./: Cargo.toml  README.md
src/: chat.rs  event_handler.rs  main.rs  ocr.rs  render.rs  renderer.rs  screenshot.rs
