[package]
name = "rust-shot"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
screenshots = "0.8.3"
winit = "0.27.5"
glium = "0.32.1"
image = "0.24.7"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.8"
base64 = "0.21.4"
rusttype = "0.9.3"